[package]
name = "llrt_dns_cache"
description = "LLRT dns cache helpers"
version = "0.7.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"
readme = "README.md"

[lib]
name = "llrt_dns_cache"
path = "src/lib.rs"

[dependencies]
hyper-util = { version = "0.1", features = [
  "client",
  "client-legacy",
], default-features = false }
llrt_context = { version = "0.7.0-beta", path = "../llrt_context" }
llrt_utils = { version = "0.7.0-beta", path = "../llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.10.0", features = [
  "macro",
], default-features = false }
tokio = { version = "1", features = ["net"], default-features = false }
tower-service = { version = "0.3", default-features = false }
quick_cache = { version = "0.6", default-features = false }
