[package]
name = "llrt_encoding"
description = "LLRT encoding helpers"
version = "0.6.2-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[dependencies]
base64-simd = { version = "0.8", features = [
  "alloc",
], default-features = false }
hex-simd = { version = "0.8", features = ["alloc"], default-features = false }
phf = { version = "0.12", features = ["macros"], default-features = false }
memchr = { version = "2", default-features = false }

[build-dependencies]
llrt_build = { version = "0.6.2-beta", path = "../llrt_build" }
