[package]
name = "llrt_json"
description = "LLRT json helpers"
version = "0.3.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_json"
path = "src/lib.rs"

[dependencies]
itoa = "1"
llrt_utils = { version = "0.3.0-beta", path = "../llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "3af3f46b13eb89a2694e5e4e2e73924a20fa9dd1", default-features = false }
ryu = "1"
simd-json = { version = "0.14", default-features = false, features = [
  "big-int-as-float",
] }

[dev-dependencies]
criterion = "0.5"
llrt_test = { version = "0.3.0-beta", path = "../llrt_test" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
llrt_build = { version = "0.3.0-beta", path = "../llrt_build" }

[[bench]]
name = "json"
harness = false
