[package]
name = "llrt_json"
description = "LLRT json helpers"
version = "0.5.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_json"
path = "src/lib.rs"

[dependencies]
itoa = "1"
llrt_utils = { version = "0.5.1-beta", path = "../llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", default-features = false }
ryu = "1"
simd-json = { version = "0.14", default-features = false, features = [
  "big-int-as-float",
] }

[dev-dependencies]
criterion = "0.5"
llrt_test = { version = "0.5.1-beta", path = "../llrt_test" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
llrt_build = { version = "0.5.1-beta", path = "../llrt_build" }

[[bench]]
name = "json"
harness = false
