[package]
name = "llrt_json"
description = "LLRT json helpers"
version = "0.7.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_json"
path = "src/lib.rs"

[dependencies]
itoa = { version = "1", default-features = false }
llrt_utils = { version = "0.7.0-beta", path = "../llrt_utils", default-features = false }
rquickjs = { version = "0.11", default-features = false }
ryu = { version = "1", default-features = false }
simd-json = { version = "0.17", features = [
    "big-int-as-float",
], default-features = false }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
llrt_test = { version = "0.7.0-beta", path = "../llrt_test" }
tokio = { version = "1", features = ["test-util"], default-features = false }

[build-dependencies]
llrt_build = { version = "0.7.0-beta", path = "../llrt_build" }

[[bench]]
name = "json"
harness = false
