[package]
name = "llrt_numbers"
description = "LLRT numbers helpers"
version = "0.5.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_numbers"
path = "src/lib.rs"

[dependencies]
itoa = { version = "1", default-features = false }
llrt_utils = { version = "0.5.1-beta", path = "../llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", default-features = false }
rand = { version = "0.8", default-features = false }
ryu = { version = "1", default-features = false }

[dev-dependencies]
criterion = { version = "0.6", default-features = false }
llrt_test = { version = "0.5.1-beta", path = "../llrt_test" }

[[bench]]
name = "numbers"
harness = false
