[package]
name = "llrt_test"
description = "LLRT test helpers"
version = "0.5.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_test"
path = "src/lib.rs"

[dependencies]
nanoid = { version = "0.4", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = [
  "futures",
  "loader",
  "parallel",
], default-features = false }
tokio = { version = "1", features = [
  "fs"
], default-features = false }
