[package]
name = "llrt_tz"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Compact timezone library for LLRT with lazy historical data loading"

[dependencies]
# LZ4 for decompressing historical data
lz4_flex = { version = "0.11", default-features = false, features = ["safe-decode"] }
# Chrono for datetime types (TimeZone trait implementation)
chrono = { version = "0.4", default-features = false, features = ["std"] }

[build-dependencies]
# Only used at build time to generate the compact data
chrono = "0.4"
chrono-tz = "0.10"
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode"] }

[dev-dependencies]
chrono-tz = "0.10"
