[package]
name = "llrt_utils"
description = "LLRT utilities"
version = "0.8.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[features]
default = ["all"]
all = ["fs", "bytearray-buffer"]

fs = ["tokio/fs"]
bytearray-buffer = ["tokio/sync"]

[dependencies]
rquickjs = { version = "0.11", features = [
  "macro",
], default-features = false }
tokio = { version = "1", features = ["sync"], default-features = false }
tracing = { version = "0.1", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"], default-features = false }

[dev-dependencies]
llrt_test = { version = "0.8.0-beta", path = "../llrt_test" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
llrt_build = { version = "0.8.0-beta", path = "../llrt_build" }
