[package]
name = "llrt_abort"
description = "LLRT Module abort"
version = "0.3.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_abort"
path = "src/lib.rs"

[features]
default = ["sleep-timers"]

sleep-timers = ["llrt_timers"]
sleep-tokio = ["tokio"]

[dependencies]
llrt_exceptions = { version = "0.3.0-beta", path = "../llrt_exceptions" }
llrt_events = { version = "0.3.0-beta", path = "../llrt_events" }
llrt_timers = { version = "0.3.0-beta", path = "../llrt_timers", optional = true }
llrt_utils = { version = "0.3.0-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "3af3f46b13eb89a2694e5e4e2e73924a20fa9dd1", features = [
  "macro",
], default-features = false }
tokio = { version = "1", features = ["time"], optional = true }
