[package]
name = "llrt_abort"
description = "LLRT Module abort"
version = "0.3.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_abort"
path = "src/lib.rs"

[features]
default = ["sleep-timers"]

sleep-timers = ["llrt_timers"]
sleep-tokio = ["tokio"]

[dependencies]
llrt_exceptions = { version = "0.3.0-beta", path = "../llrt_exceptions" }
llrt_events = { version = "0.3.0-beta", path = "../llrt_events" }
llrt_timers = { version = "0.3.0-beta", path = "../llrt_timers", optional = true }
llrt_utils = { version = "0.3.0-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.8.1", features = [
  "macro",
], default-features = false }
tokio = { version = "1", features = ["time"], optional = true }

[dev-dependencies]
llrt_test = { path = "../../libs/llrt_test" }
tokio = { version = "1", features = ["full"] }
