[package]
name = "llrt_assert"
description = "LLRT Module assert"
version = "0.6.2-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_assert"
path = "src/lib.rs"

[dependencies]
llrt_utils = { version = "0.6.2-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", default-features = false }

[dev-dependencies]
llrt_test = { path = "../../libs/llrt_test" }
