[package]
name = "llrt_async_hooks"
description = "LLRT Module async_hooks"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_async_hooks"
path = "src/lib.rs"

[dependencies]
llrt_hooking = { version = "0.8.1-beta", path = "../../libs/llrt_hooking" }
llrt_utils = { version = "0.8.1-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { version = "0.11", default-features = false }
tracing = { version = "0.1", default-features = false }
