[package]
name = "llrt_buffer"
description = "LLRT Module buffer"
version = "0.3.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_buffer"
path = "src/lib.rs"

[dependencies]
llrt_encoding = { version = "0.3.0-beta", path = "../../libs/llrt_encoding" }
llrt_utils = { version = "0.3.0-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "772bdeba90c495e7ba4347fa017d87c6b0cdad81", features = [
  "macro",
], default-features = false }

[dev-dependencies]
llrt_test = { path = "../../libs/llrt_test" }
tokio = { version = "1", features = ["full"] }
