[package]
name = "llrt_buffer"
description = "LLRT Module buffer"
version = "0.5.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_buffer"
path = "src/lib.rs"

[dependencies]
llrt_encoding = { version = "0.5.1-beta", path = "../../libs/llrt_encoding" }
llrt_utils = { version = "0.5.1-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = [
  "futures",
  "macro",
], default-features = false }

[dev-dependencies]
llrt_test = { path = "../../libs/llrt_test" }
tokio = { version = "1", features = ["full"] }
