[package]
name = "llrt_buffer"
description = "LLRT Module buffer"
version = "0.7.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_buffer"
path = "src/lib.rs"

[dependencies]
itoa = { version = "1", default-features = false }
llrt_encoding = { version = "0.7.0-beta", path = "../../libs/llrt_encoding" }
llrt_utils = { version = "0.7.0-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { version = "0.11", features = [
  "futures",
  "macro",
], default-features = false }
ryu = { version = "1", default-features = false }

[dev-dependencies]
llrt_test = { path = "../../libs/llrt_test" }
tokio = { version = "1", features = ["full"], default-features = false }
