[package]
name = "llrt_child_process"
description = "LLRT Module child_process"
version = "0.7.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_child_process"
path = "src/lib.rs"

[dependencies]
itoa = { version = "1", default-features = false }
llrt_buffer = { version = "0.7.0-beta", path = "../llrt_buffer" }
llrt_context = { version = "0.7.0-beta", path = "../../libs/llrt_context" }
llrt_events = { version = "0.7.0-beta", path = "../llrt_events" }
llrt_stream = { version = "0.7.0-beta", path = "../llrt_stream" }
llrt_utils = { version = "0.7.0-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.10.0", features = [
    "std",
], default-features = false }
tokio = { version = "1", features = ["process", "time"], default-features = false }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[dev-dependencies]
llrt_test = { path = "../../libs/llrt_test" }
tokio = { version = "1", features = ["rt"] }
