[package]
name = "llrt_console"
description = "LLRT Module console"
version = "0.7.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_console"
path = "src/lib.rs"

[dependencies]
llrt_logging = { version = "0.7.0-beta", path = "../../libs/llrt_logging" }
llrt_utils = { version = "0.7.0-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { version = "0.11", default-features = false }
