[package]
name = "llrt_crypto"
description = "LLRT Module crypto"
version = "0.7.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"
readme = "README.md"

[lib]
name = "llrt_crypto"
path = "src/lib.rs"

[features]
default = ["subtle-rs"]

subtle-rs = [
  "llrt_json",
  "aes",
  "aes-gcm",
  "aes-kw",
  "cbc",
  "ctr",
  "rsa",
  "p256",
  "p384",
  "p521",
  "elliptic-curve",
  "x25519-dalek",
  "ecdsa",
  "spki",
  "der",
  "const-oid",
  "pkcs8",
]

[dependencies]
crc32c = { version = "0.6", default-features = false }
crc32fast = { version = "1", default-features = false }
llrt_buffer = { version = "0.7.0-beta", path = "../llrt_buffer" }
llrt_context = { version = "0.7.0-beta", path = "../../libs/llrt_context" }
llrt_encoding = { version = "0.7.0-beta", path = "../../libs/llrt_encoding" }
llrt_utils = { version = "0.7.0-beta", path = "../../libs/llrt_utils", default-features = false }
once_cell = { version = "1", features = ["std"], default-features = false }
rand = { version = "0.9", features = [
  "std",
  "std_rng",
  "thread_rng",
], default-features = false }
ring = { version = "0.17", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.10.0", features = [
  "macro",
], default-features = false }

# Optional
aes = { version = "0.9.0-rc.1", optional = true }
aes-gcm = { version = "0.11.0-rc.1", features = [
  "alloc",
], default-features = false, optional = true }
aes-kw = { version = "0.3.0-rc.1", features = [
  "oid",
], default-features = false, optional = true }
cbc = { version = "0.2.0-rc.1", features = ["alloc"], optional = true }
const-oid = { version = "0.10", features = [
  "db",
], default-features = false, optional = true }
ctr = { version = "0.10.0-rc.2", default-features = false, optional = true }
der = { version = "0.8.0-rc.9", features = [
  "derive",
  "alloc",
], default-features = false, optional = true }
ecdsa = { version = "0.17.0-rc.7", default-features = false, optional = true }
elliptic-curve = { version = "0.14.0-rc.16", features = [
  "alloc",
], default-features = false, optional = true }
llrt_json = { version = "0.7.0-beta", path = "../../libs/llrt_json", optional = true }
md-5 = { version = "0.11.0-rc.3", default-features = false }
rsa = { version = "0.10.0-rc.9", features = [
  "std",
  "sha2",
  "encoding",
  "os_rng",
], default-features = false, optional = true }
p256 = { version = "0.14.0-pre.11", features = [
  "ecdh",
  "ecdsa",
  "pkcs8",
], default-features = false, optional = true }
p384 = { version = "0.14.0-pre.11", features = [
  "ecdh",
  "ecdsa",
  "pkcs8",
], default-features = false, optional = true }
p521 = { version = "0.14.0-pre.11", features = [
  "ecdh",
  "ecdsa",
  "pkcs8",
], default-features = false, optional = true }
pkcs8 = { version = "0.11.0-rc.7", default-features = false, features = [
  "alloc",
], optional = true }
spki = { version = "0.8.0-rc.4", features = [
  "alloc",
], default-features = false, optional = true }
x25519-dalek = { version = "3.0.0-pre.1", features = [
  "os_rng",
  "static_secrets",
  "zeroize",
], default-features = false, optional = true }

[dev-dependencies]
llrt_test = { path = "../../libs/llrt_test" }
