[package]
name = "llrt_crypto"
description = "LLRT Module crypto"
version = "0.7.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"
readme = "README.md"

[lib]
name = "llrt_crypto"
path = "src/lib.rs"

[features]
default = ["crypto-rust"]

# Internal feature: enables DER parsing for SubtleCrypto key import/export
_subtle-full = [
  "llrt_json",
  "const-oid",
  "der",
  "pkcs8",
  "spki",
]

# Internal feature: enables RustCrypto dependencies for key import/export
_rustcrypto = [
  "_subtle-full",
  "aes",
  "aes-gcm",
  "aes-kw",
  "cbc",
  "ctr",
  "ecdsa",
  "ed25519-dalek",
  "elliptic-curve",
  "hkdf",
  "hmac",
  "rsa",
  "p256",
  "p384",
  "p521",
  "pbkdf2",
  "sha1",
  "x25519-dalek",
]

crypto-rust = ["_rustcrypto"]
crypto-ring = ["ring"]
crypto-ring-rust = ["ring", "_rustcrypto"]
crypto-graviola = ["graviola"]
crypto-graviola-rust = ["graviola", "_rustcrypto"]
crypto-openssl = ["openssl-sys", "openssl", "_subtle-full"]

[dependencies]
crc32c = { version = "0.6", default-features = false }
crc32fast = { version = "1", default-features = false }
llrt_buffer = { version = "0.7.0-beta", path = "../llrt_buffer" }
llrt_context = { version = "0.7.0-beta", path = "../../libs/llrt_context" }
llrt_encoding = { version = "0.7.0-beta", path = "../../libs/llrt_encoding" }
llrt_utils = { version = "0.7.0-beta", path = "../../libs/llrt_utils", default-features = false }
md-5 = { version = "0.11.0-rc.5", default-features = false }
once_cell = { version = "1", features = ["std"], default-features = false }
rand = { version = "0.10.0", features = [
  "std",
  "std_rng",
  "thread_rng",
], default-features = false }
rquickjs = { version = "0.11", default-features = false }


# optional
llrt_json = { version = "0.7.0-beta", path = "../../libs/llrt_json", optional = true }
aes = { version = "0.9.0-rc.4", optional = true }
aes-gcm = { version = "0.11.0-rc.3", features = [
  "alloc",
], default-features = false, optional = true }
aes-kw = { version = "0.3.0-rc.2", features = [
  "oid",
], default-features = false, optional = true }
cbc = { version = "0.2.0-rc.3", features = ["alloc"], optional = true }
const-oid = { version = "0.10", features = [
  "db",
], default-features = false, optional = true }
ctr = { version = "0.10.0-rc.3", default-features = false, optional = true }
der = { version = "0.8", features = [
  "derive",
  "alloc",
], default-features = false, optional = true }
ecdsa = { version = "0.17.0-rc.16", default-features = false, optional = true }
ed25519-dalek = { version = "3.0.0-pre.6", features = [
  "alloc",
  "pkcs8",
  "rand_core",
], default-features = false, optional = true }
elliptic-curve = { version = "0.14.0-rc.28", features = [
  "alloc",
  "sec1",
], default-features = false, optional = true }
hkdf = { version = "0.13.0-rc.5", default-features = false, optional = true }
hmac = { version = "0.13.0-rc.5", default-features = false, optional = true }
rsa = { version = "0.10.0-rc.15", features = [
  "std",
  "sha2",
  "encoding",
], default-features = false, optional = true }
p256 = { version = "0.14.0-rc.7", features = [
  "ecdh",
  "ecdsa",
  "pkcs8",
], default-features = false, optional = true }
p384 = { version = "0.14.0-rc.7", features = [
  "ecdh",
  "ecdsa",
  "pkcs8",
], default-features = false, optional = true }
p521 = { version = "0.14.0-rc.7", features = [
  "ecdh",
  "ecdsa",
  "pkcs8",
], default-features = false, optional = true }
pbkdf2 = { version = "0.13.0-rc.9", default-features = false, optional = true }
pkcs8 = { version = "0.11.0-rc.11", default-features = false, features = [
  "alloc",
], optional = true }
sha1 = { version = "0.11.0-rc.5", default-features = false, optional = true }
spki = { version = "0.8.0-rc.4", features = [
  "alloc",
], default-features = false, optional = true }
x25519-dalek = { version = "3.0.0-pre.6", features = [
  "static_secrets",
  "zeroize",
], default-features = false, optional = true }

# Crypto provider dependencies
ring = { version = "0.17", default-features = false, optional = true }
openssl-sys = { version = "0.9", optional = true }
openssl = { version = "0.10", optional = true }
graviola = { version = "0.3", optional = true }

[dev-dependencies]
llrt_test = { path = "../../libs/llrt_test" }
