[package]
name = "llrt_dns"
description = "LLRT Module dns"
version = "0.6.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"
readme = "README.md"

[lib]
name = "llrt_dns"
path = "src/lib.rs"

[dependencies]
llrt_context = { version = "0.6.0-beta", path = "../../libs/llrt_context" }
llrt_dns_cache = { version = "0.6.0-beta", path = "../../libs/llrt_dns_cache" }
llrt_hooking = { version = "0.6.0-beta", path = "../../libs/llrt_hooking" }
llrt_utils = { version = "0.6.0-beta", path = "../../libs/llrt_utils", default-features = false }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = [
  "macro",
], default-features = false }
